2022-11-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	[doc]: Add make(1) dependency.

	* doc/doc.am (doc/groff-man-pages.pdf): Add dependency on our
	FreeEuro font since we embed it.

2022-11-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	[build]: Refactor generation of "freeeuro.pfa" to make more
	economical use of existing infrastructure, per a suggestion from
	Deri James.  This also puts the file where gropdf's "download"
	file can find it when running it in a separate build directory.
	We use it to generate "groff-man-pages.pdf".

	* font/devps/freeeuro.pfa: Rename this...
	* font/devps/freeeuro.ps: ...to this.  We can now use the suffix
	rule that also applies to "symbolsl.ps" and "zapfdr.ps".

	* font/devps/devps.am (DEVPSFONTFILES): Move "freeeuro.pfa" from
	here...
	(DEVPSFONTFILES_GENERATED): ...to here.
	(EXTRA_DIST): Ship the "new" "freeeuro.ps" file.

2022-11-25  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devps/psstrip.sed: Stop stripping comment lines, in
	general instead of preserving only ones that use the form in the
	Document Structuring Coventions.  This way we won't strip
	copyright notices, like Werner Lemberg's in the FreeEuro font.
	Thanks to Deri James for pointing this out.

2022-11-22  G. Branden Robinson <g.branden.robinson@gmail.com>

	tmac/an-ext.tmac: Refactor to reduce code size.

	* tmac/an-ext.tmac: Refactor to reduce code size.  `UE` and `ME`
	have nearly identical implementations so...

	(mQ): Define new macro to perform the requisite actions, and...

	(UE, ME): Make these into wrappers calling mQ.

2022-11-22  G. Branden Robinson <g.branden.robinson@gmail.com>

	[man]: Add unit tests for `MT/ME` and `UR/UE`.

	* tmac/tests/an-ext_MT-works.sh:
	* tmac/tests/an-ext_UR-works.sh: Do it.

	* tmac/tmac.am (tmac_TESTS): Run tests.

2022-11-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/gropdf/gropdf.pl: Throw warning if paper format is
	unrecognized.
